--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -116,6 +116,8 @@ jobs:
 
       - name: Setup Go
         uses: actions/setup-go@v5
+        with:
+          go-version-file: 'agent/go-service/go.md'
 
       - name: Download MaaFramework
         uses: robinraju/release-downloader@v1
