chore: 修一下format CI和Agent.md (#385)
## 概要

本 PR 针对 format CI 进行修复，并优化了 AGENT.md，主要包括：

1. 修复了 format CI 中错误的传参导致的错误的问题，调整了定时 CI 的计划时间为 CST 早上六点。
2. 减少了 AGENT.md 中不必要的重复（例如链接），以减少 token 消耗。
3. 执行了一次代码格式化（via CI）。

## Summary by Sourcery

更新格式化 CI 配置，并完善 AI Agent 贡献指南。

增强功能：
- 在 `AGENTS.md` 中澄清 MaaEnd 项目概览和关键文件说明，同时减少冗余链接和引用。
- 调整 `AGENTS.md` 中 MaaFramework 文档链接，改用原始文件（raw）URL，并将其集中到专门的参考部分。

构建：
- 更新格式化工作流的定时运行时间和 Node.js 版本，并简化格式化命令的调用方式。
- 将 `sync_schema_files` 工作流的计划任务调整为新的每日运行时间，以与 CST 对齐。

文档：
- 修订 `AGENTS.md`，更好地描述任务、流水线以及关键项目文件，并简化文档结构和术语。

<details>
<summary>Original summary in English</summary>

## Summary by Sourcery

Update formatting CI configuration and refine the AI agent contribution
guide.

Enhancements:
- Clarify MaaEnd project overview and key file descriptions in AGENTS.md
while reducing redundant links and references.
- Adjust MaaFramework documentation links in AGENTS.md to use raw file
URLs and centralize them in a dedicated reference section.

Build:
- Update the scheduled run time and Node.js version for the format
workflow, and simplify the format command invocation.
- Change the sync_schema_files workflow schedule to a new daily run time
aligned with CST.

Documentation:
- Revise AGENTS.md to better describe tasks, pipelines, and key project
files, and to streamline documentation structure and terminology.

</details>

---------

Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>

--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -3,7 +3,7 @@ name: format
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 23 * * *" # UTC
+    - cron: "0 22 * * *" # UTC+8 06:00
 
 jobs:
   format:
@@ -22,7 +22,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 22
           cache: "pnpm"
 
       - name: Setup Go
@@ -35,7 +35,7 @@ jobs:
         run: pnpm install
 
       - name: Run format
-        run: pnpm format:all --ignore-path .prettierignore
+        run: pnpm format:all
 
       - name: Commit and push changes
         uses: actions-js/push@master
