feat(DailyTask): 增加装备制作任务并优化活跃度领取流程
- 新增：自动执行“装备制造”任务逻辑
- 优化：改进活跃度奖励领取机制，识别更准确
- 修复：集成并修复了“返回逻辑模块”，实现任务闭环

--- a/assets/resource/pipeline/DailyRewards/Tasks.json
+++ b/assets/resource/pipeline/DailyRewards/Tasks.json
@@ -88,13 +88,14 @@
         "next": [
             "DailyTaskUpgradeWeapon",
             "DailyTaskCreation",
+            "DailyTaskAssemble",
             "[JumpBack]DailyTaskScrollDown",
             "DailyTaskScrollFinished"
         ]
     },
     "DailyTaskUpgradeWeapon": {
         "desc": "检测是否有升级武器任务",
-        "enable": true,
+        "enable": false,
         "max_hit": 1,
         "recognition": {
             "type": "OCR",
@@ -114,6 +115,55 @@
         "post_delay": 0,
         "next": [
             "DailyTaskCreationIsValid"
+        ]
+    },
+    "DailyTaskAssemble": {
+        "desc": "检测是否有制造装备任务",
+        "enable": false,
+        "max_hit": 1,
+        "recognition": {
+            "type": "OCR",
+            "param": {
+                "expected": [
+                    "装备制造"
+                ],
+                "roi": [
+                    343,
+                    191,
+                    469,
+                    409
+                ]
+            }
+        },
+        "pre_delay": 0,
+        "post_delay": 0,
+        "next": [
+            "DailyTaskAssembleIsValid"
+        ]
+    },
+    "DailyTaskAssembleIsValid": {
+        "desc": "检测升级武器任务是否可以执行",
+        "recognition": {
+            "type": "OCR",
+            "param": {
+                "expected": [
+                    "前往"
+                ],
+                "roi": "DailyTaskAssemble",
+                "roi_offset": [
+                    429,
+                    -10,
+                    94,
+                    20
+                ]
+            }
+        },
+        "action": {
+            "type": "Click"
+        },
+        "next": [
+            "[JumpBack]CheckWeaponInventory",
+            "PressEsc"
         ]
     },
     "DailyTaskUpgradeWeaponIsValid": {
@@ -143,7 +193,7 @@
     },
     "DailyTaskCreation": {
         "desc": "检测是否有简易制作任务",
-        "enable": true,
+        "enable": false,
         "max_hit": 1,
         "recognition": {
             "type": "OCR",
@@ -270,9 +320,9 @@
                 "template": "DailyRewards/ActivityReward.png",
                 "roi": [
                     185,
-                    475,
-                    35,
-                    35
+                    204,
+                    50,
+                    306
                 ],
                 "threshold": 0.9
             }
