refactor(DailyTask): 统一 CloseIcon 调用至 common 模块

--- a/assets/resource/pipeline/DailyRewards/Tasks.json
+++ b/assets/resource/pipeline/DailyRewards/Tasks.json
@@ -358,7 +358,7 @@
         "recognition": {
             "type": "TemplateMatch",
             "param": {
-                "template": "DailyRewards/CloseButton.png",
+                "template": "Common/BackButton.png",
                 "threshold": 0.9,
                 "roi": [
                     1215,
